# cmake-deptest

./: CMakeLists.txt  README.md
exe/: CMakeLists.txt
exe/src/: main.c
lib1/: CMakeLists.txt
lib1/include/: lib1.h
lib1/src/: lib1.c
lib2/: CMakeLists.txt
lib2/include/: lib2.h
lib2/src/: lib2.c
